--- a/examples/python-web-app/Dockerfile
+++ b/examples/python-web-app/Dockerfile
@@ -1,18 +1,12 @@
-FROM ubuntu
+FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt /app
-COPY devops /app
+COPY requirements.txt .
+COPY devops ./devops/
 
-RUN apt-get update && \
-    apt-get install -y python3 python3-pip && \
-    pip install -r requirements.txt && \
-    cd devops
+RUN pip install --no-cache-dir -r requirements.txt
 
+EXPOSE 8000
 ENTRYPOINT ["python3"]
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
-
-
-
-
+CMD ["devops/manage.py" , "runserver" , "0.0.0.0:8000" ]
